// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDarkExampleWrapper should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-dark-example-wrapper"
  />
</DocumentFragment>
`;

exports[`BpkDarkExampleWrapper should render correctly with padded={true} 1`] = `
<DocumentFragment>
  <div
    class="bpk-dark-example-wrapper bpk-dark-example-wrapper--padded"
  />
</DocumentFragment>
`;
